# GPTinterface

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  cppTest  main.cpp
gui/: mainwindow.cpp  mainwindow.h  workspace.cpp  workspace.h
gui/widgets/: promptInput.cpp  promptInput.h
src/: main.cpp
src/devtools/: ToolTipEventFilter.cpp  ToolTipEventFilter.h  logger.cpp  logger.h
src/gui/: MainWindow.cpp  MainWindow.h  Workspace.cpp  Workspace.h  mainwindow.ui
src/gui/widgets/: BottomToolBar.cpp  BottomToolBar.h  HistoryList.cpp  HistoryList.h  InputBox.cpp  InputBox.h  InputMessage.cpp  InputMessage.h  LeftToolBar.cpp  LeftToolBar.h  OutputContainer.cpp  OutputContainer.h  RightToolBar.cpp  RightToolBar.h  WSTabWidget.cpp  WSTabWidget.h  customScrollArea.cpp  customScrollArea.h  customTextEdit.cpp  customTextEdit.h
src/gui/widgets/history/: HistoryButtonMenu.cpp  HistoryButtonMenu.h
src/gui/widgets/static_context/: scBottomBar.cpp  scBottomBar.h  scItem.cpp  scItem.h  scScrollArea.cpp  scScrollArea.h
src/gui/widgets/textboxes/: aiText.cpp  aiText.h  codeBlock.cpp  codeBlock.h  customTextEdit.cpp  customTextEdit.h  userText.cpp  userText.h
src/utils/: Espnet2Encoder.cpp  Espnet2Encoder.h  GlobalMediator.cpp  GlobalMediator.h  KeyPressHandler.cpp  KeyPressHandler.h  MediaQueue.cpp  MediaQueue.h  PollyUtility.cpp  PollyUtility.h  RequestHandler.cpp  RequestHandler.h  TikTokenEncoder.cpp  TikTokenEncoder.h
